<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Everdoing</string>
    <string name="widget_name">Everdoing</string>
    <string name="edit_time_hint">input the time</string>
    <string name="edit_summary_hint">input the summary</string>
    <string name="edit_detail_hint">input the detail</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_giveup">Give up</string>
    <string name="dialog_title_giveup">Quit without saving?</string>
    <string name="dialog_title_edit_commit">Save changes?</string>
    <string name="dialog_title_delete_item">Delete it?</string>
    
    <string name="button_title_ok">OK</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_title_yes">YES</string>
    <string name="button_title_no">NO</string>
    <string name="button_title_new">NEW</string>
    <string name="button_title_home">HOME</string>
    
    <string name="bar_title_home">EverDoing</string>
    <string name="bar_title_main">Today</string>
    <string name="bar_title_this_week">This Week</string>
    <string name="bar_title_last_week">Last Week</string>
    <string name="bar_title_this_month">This Month</string>
    <string name="bar_title_last_month">Last Month</string>
    
    <string name="home_item_title_today">"Today's doing"</string>
    <string name="home_item_title_this_week">"This week's"</string>
    <string name="home_item_title_last_week">"Last week's"</string>
    <string name="home_item_title_this_month">"This month's"</string>
    <string name="home_item_title_last_month">"Last month's"</string>
    
    <string name="toast_saved">saved successfully</string>
    <string name="toast_nothing_saved">nothing to save</string>
    <string name="toast_delete">deleted successfully</string>

</resources>