<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/edit_button_area"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_button_save"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/button_text_save"
            android:textSize="17dp" />

        <Button
            android:id="@+id/edit_button_giveup"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/button_text_giveup"
            android:textSize="17dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/edit_divider_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/edit_button_area"
        android:layout_marginBottom="2dp"
        android:background="@color/gray"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/edit_divider_2"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_time_edit_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@null"
            android:hint="@string/edit_time_hint"
            android:inputType="datetime"
            android:padding="3dp"
            android:singleLine="true"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/edit_divider_0"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/edit_summary_edit_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@null"
            android:hint="@string/edit_summary_hint"
            android:padding="3dp"
            android:singleLine="true"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/edit_divider_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/edit_detail_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top|left"
            android:hint="@string/edit_detail_hint"
            android:padding="3dp"
            android:singleLine="false"
            android:textSize="16dp" />
    </LinearLayout>

</RelativeLayout>